--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -6,7 +6,9 @@
     width: 100%;
     height: 100vh;
 }
-
+.section-space {
+    height: 500px; /* Boşluk büyüklüğü */
+}
 /* Sol menü */
 .left {
     width: 250px;
@@ -42,7 +44,6 @@
     width: calc(100% - 250px); /* Sol menü ile hizalı olur */
     padding: 20px;
     box-sizing: border-box;
-    background-color: #ecf0f1;
     margin-left: 250px; /* Sol menü kadar boşluk bırakır */
 }
 
@@ -103,7 +104,7 @@
     border: 1px solid #ccc;
 }
 
-.urun_ekle_onay {
+.ekle_onay {
     background-color: #3498db;
     color: white;
     border: none;
@@ -113,7 +114,7 @@
     border-radius: 5px;
 }
 
-.urun_ekle_onay:hover {
+.ekle_onay:hover {
     background-color: #2980b9;
 }
 
@@ -261,3 +262,4 @@
 .doktorlar_container .edit_button:hover, .doktorlar_container .delete_button:hover {
     background-color: #c0392b;
 }
+
